<resources>
    <string name="app_name">Garcon</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Action bar Strings-->
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_help">Help</string>

    <!-- Fragment Button Strings -->
    <string name="buttonMakeReservation">Make Reservations</string>
    <string name="buttonViewReservation">View Reservations</string>
    <string name="buttonChangeReservation">Change Reservations</string>
    <string name="title_activity_owner_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Help Activity Strings -->
    <string name="authorDesc">App made by Carly Emile and Charles Zhu</string>
    <string name="makeLabel">Make A Reservation</string>
    <string name="editLabel">Edit A Reservation</string>
    <string name="deleteLabel">Delete A Reservation</string>
    <string name="viewLabel">View A Reservation</string>
    <string name="makeDesc">To make a reservation navigate to the Make Reservation screen and fill out the information requested by the text field</string>

    <string name="viewDesc">"To view a reservation, navigate to the View Reservation screen. Tap on a reservation in the list to view details of that reservation</string>

    <string name="deleteDesc">To delete a reservation, navigate to the Edit Reservation
        screen and tap on the reservation in the list that you\'d like to delete. Then,
        simply press the \'Delete\' button to remove. This action cannot be un-done.</string>

    <string name="editDesc">"To edit a reservation, navigate to the Edit Reservation screen and tap on the reservation in the list that you'd like to change. Enter the new information and press the update button.</string>
    <string name="userLabel">Change Name or Phone Number</string>
    <string name="userDesc">To change name or phone number, go to settings after the log in screen.
        Make changes and press the button to update.</string>
</resources>
