<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="charleszhu.qunnipiac.edu.gittest.HelpActivity">

    <TableRow>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/garconlogo"
            android:id="@+id/imageView"
            android:layout_marginEnd="20dp" />

        <TextView
            android:text="Help"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:id="@+id/textView"
            android:layout_marginEnd="135dp"
            />
    </TableRow>

    <TextView
        android:id="@+id/labelMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:text="@string/makeLabel"
        />

    <TextView
        android:id="@+id/descriptionMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/makeDesc"
        />

    <TextView
        android:id="@+id/labelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:text="@string/viewLabel"
        />

    <TextView
        android:id="@+id/descriptionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/viewDesc"
        />

    <TextView
        android:id="@+id/labelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:text="@string/editLabel"
        />

    <TextView
        android:id="@+id/descriptionEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/editDesc"
        />

    <TextView
        android:id="@+id/labelDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:text="@string/deleteLabel"
        />

    <TextView
        android:id="@+id/descriptionDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/deleteDesc"
        />

    <TextView
        android:id="@+id/labelUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:text="@string/userLabel"
        />

    <TextView
        android:id="@+id/descriptionUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/userDesc"/>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/authorDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/authorDesc"
        android:gravity="end"
        />

</TableLayout>
